// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can project user-to-posts relationship in reverse (access use via post author field). If Post.author IS optional than it IS nullable in the GraphQL API.: graphqlSchema 1`] = `
"
type Query {
  posts: [Post!]!
}

type User {
  id: ID!
}

type Post {
  id: ID!
  author: User
}
"
`;

exports[`can project user-to-posts relationship in reverse (access use via post author field). If Post.author is NOT optional than it is NOT nullable in the GraphQL API.: graphqlSchema 1`] = `
"
type Query {
  posts: [Post!]!
}

type User {
  id: ID!
}

type Post {
  id: ID!
  author: User!
}
"
`;
